welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:13: error: value estFaceMur is not a member of Boolean
				else if ( getDirection() == Direction.WEST estFaceMur()) { 
                                                                           ^